--- a/unet_submission.ipynb
+++ b/unet_submission.ipynb
@@ -409,7 +409,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 0\n"
+      "epoch 0\n",
+      "[1,   244] loss: 3.203\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 75/75 [01:28<00:00,  1.18s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "val loss :  0.6079794046640591\n",
+      "epoch 1\n",
+      "[2,   244] loss: 1.458\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 75/75 [01:33<00:00,  1.25s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "val loss :  0.6664472029620924\n",
+      "epoch 2\n"
      ]
     }
    ],
